--- a/RealPromo/RealPromo/RealPromo.iOS/RealPromo.iOS.csproj
+++ b/RealPromo/RealPromo/RealPromo.iOS/RealPromo.iOS.csproj
@@ -133,4 +133,13 @@
       <Name>RealPromo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\tag%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\tag%403x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\tag.png" />
+  </ItemGroup>
 </Project>
